--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ minecraft {
     mappings = "snapshot_20171003"
     useDepAts = true
     
+    clientJvmArgs += '-Dfml.coreMods.load=grondag.acuity.FMLPlugin'
+    
     replaceIn "Reference.java"
     replace "@VERSION@", project.version
 }
@@ -66,7 +68,7 @@ configurations {
 reobf {
     jar {
             extraLines += [ "PK: org/magicwerk/brownies/collections grondag/hard_science/shade/org/magicwerk/brownies/collections" ]
-    			extraLines += [ "PK: org/magicwerk/brownies/collections/exceptions grondag/hard_science/shade/org/magicwerk/brownies/collections/exceptions" ]
+    	    extraLines += [ "PK: org/magicwerk/brownies/collections/exceptions grondag/hard_science/shade/org/magicwerk/brownies/collections/exceptions" ]
 		    extraLines += [ "PK: org/magicwerk/brownies/collections/function grondag/hard_science/shade/org/magicwerk/brownies/collections/function" ]
 		    extraLines += [ "PK: org/magicwerk/brownies/collections/helper grondag/hard_science/shade/org/magicwerk/brownies/collections/helper" ]
 		    extraLines += [ "PK: org/magicwerk/brownies/collections/helper/primitive grondag/hard_science/shade/org/magicwerk/brownies/collections/helper/primitive" ]
