--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,22 @@ reobf {
     }
 }
 
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "https://grondag-repo.appspot.com") {
+	            credentials {
+		            username "$mavenUser"
+		            password "$mavenPassword"
+        		}
+            }
+            pom.version = project.version
+            pom.artifactId = project.archivesBaseName
+            pom.groupId = project.group
+        }
+    }
+}
+
 repositories {
 
 	maven { // CTM & TOP
@@ -112,6 +128,10 @@ repositories {
     maven {
     	name = "grondag"
     	url = "https://grondag-repo.appspot.com"
+    	credentials {
+            username "guest"
+            password ""
+		}
     }
 }
 
@@ -127,7 +147,7 @@ dependencies {
     
 	deobfCompile "mezz.jei:jei_1.12.2:${jei_version}"
     deobfCompile "mcjty.theoneprobe:TheOneProbe-1.12:1.12-${top_version}"
-    deobfCompile "grondag:acuity:mc1.12.2-0.0.0.240-alpha"
+    deobfCompile "grondag:acuity:mc1.12.2-0.0.0.456-alpha"
 	
 	// not currently using these APIs
 	// here to support compatibility testing in dev environment
@@ -180,4 +200,5 @@ jar {
             exclude 'META-INF', 'META-INF/**'
         }
     }
+    
 }
