--- a/build.gradle
+++ b/build.gradle
@@ -22,18 +22,35 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'maven-publish'
 
-import org.ajoberstar.grgit.Grgit
+// see https://github.com/passsy/gradle-GitVersioner
+ext.gitVersioner = [
+        defaultBranch           : "master",  // default "master"
+        stableBranches          : ["master"], // default [], the feature branch postfix (-dm4(6)) will not be appended on stable branches, all commits are included into the version number calculation
+        yearFactor              : 1200, 	  // default "1000", increasing every 8.57h
+        snapshotEnabled         : true,      // default false, the "-SNAPSHOT" postfix
+        localChangesCountEnabled: false,       // default false, the (<commitCount>) before -SNAPSHOT
+        shortName: { gitVersion ->            // optional closure to build a short name
+          // allows you to add your own short name logic
+          // All properties from gitVersion are available
+          // can be used for CI `System.getenv("BUILD_NUMBER")`
 
-def repo = Grgit.open(project.file('.'))
-project.ext.gitHash = repo.log().find().abbreviatedId
+          // i.e. use short sha1
+          return gitVersion.commit.subSequence(0, 7)
+        }
+]
+
+// import the script which runs the version generation
+apply from: 'https://raw.githubusercontent.com/passsy/gradle-GitVersioner/master/git-versioner.gradle'
+
+// variable `gitVersionName` can be used everywhere to get the revision name
+println("versionName: $gitVersionName") // output: "versionName: 1083-dm4(6)-SNAPSHOT"
 
 ext.buildnumber = 0
 project.buildnumber = System.getenv('BUILD_NUMBER') != null ? System.getenv('BUILD_NUMBER') : project.ext.gitHash
 
-version = "MC${minecraft_version}-${mod_version}.${buildnumber}"
-group= "grondag.exotic_matter" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = "mc${minecraft_version}-${mod_version}.${gitVersionName}-${release_type}"
+group= "grondag" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "exotic_matter"
-
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
