Fix buils in dev env

--- a/build.gradle
+++ b/build.gradle
@@ -159,7 +159,7 @@ dependencies {
     
 	deobfCompile "mezz.jei:jei_1.12.2:${jei_version}"
     deobfCompile "mcjty.theoneprobe:TheOneProbe-1.12:1.12-${top_version}"
-    deobfCompile "grondag:acuity:mc1.12.2-0.0.0.456-alpha"
+   // deobfCompile "grondag:acuity:mc1.12.2-0.0.0.456-alpha"
 	
 	// not currently using these APIs
 	// here to support compatibility testing in dev environment
